--- a/index.html
+++ b/index.html
@@ -1,9 +1,60 @@
-<html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=, initial-scale=1.0">
+        <title>Proyecto Scrimba Oldagram</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+        <script defer src="index.js"></script>
     </head>
     <body>
-        <img src="images/logo.png">
-        <script src="index.js"></script>
+        <main class="container">
+            <header class="header">
+                <img src="./images/logo.png" alt="logo">
+                <img class="avatar" src="./images/user-avatar.png" alt="avatar">
+            </header>
+            <section>
+                <article>
+                    <header class="autor">
+                        <img class="avatar" src="./images/avatar-vangogh.jpg" alt="avatar">
+                        <div>
+                            <h3>Vincent van Gogh</h3>
+                            <p>Zundert, Netherlands</p>
+                        </div>
+                    </header>
+                    <img src="./images/post-vangogh.jpg" alt="selfie de autor" class="picture">
+                    <div class="likes">
+                        <img class="iconos" src="./images/icon-heart.png" alt="hart">
+                        <img class="iconos" src="./images/icon-comment.png" alt="comment">
+                        <img class="iconos" src="./images/icon-dm.png" alt="message">
+                    </div>
+                    <div class="comentarios">
+                        <p><span class="gordita">21</span> likes</p>
+                        <p><span class="gordita">vincey1853</span> just took a few mushrooms lol</p>
+                    </div>
+                </article>
+                <article>
+                    <header class="autor">
+                        <img class="avatar" src="./images/avatar-vangogh.jpg" alt="avatar">
+                        <div>
+                            <h3>Vincent van Gogh</h3>
+                            <p>Zundert, Netherlands</p>
+                        </div>
+                    </header>
+                    <img src="./images/post-vangogh.jpg" alt="selfie de autor" class="picture">
+                    <div class="likes">
+                        <img class="iconos" src="./images/icon-heart.png" alt="hart">
+                        <img class="iconos" src="./images/icon-comment.png" alt="comment">
+                        <img class="iconos" src="./images/icon-dm.png" alt="message">
+                    </div>
+                    <div class="comentarios">
+                        <p><span class="gordita">21</span> likes</p>
+                        <p><span class="gordita">vincey1853</span> just took a few mushrooms lol</p>
+                    </div>
+                </article>
+            </section>
+        </main>
     </body>
 </html>
